fixed text misalignment

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -30,6 +30,7 @@ header nav {
     text-align: center;
     font-weight: bold;
     color: #34495e;
+    background-color: #ffdd57;
 }
 
 .button-box {
@@ -41,6 +42,7 @@ header nav {
     margin-top: 50px;
     padding: 30px;
     width: 1000px;
+    background-color: #ffdd57;
 }
 
 footer {
